k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: petapp
spec:
  selector:
    app: backend
  ports:
    - port: 8081
      targetPort: 8081
